--- a/detalle.html
+++ b/detalle.html
@@ -58,6 +58,8 @@
                 <h1 id="titulo"></h1>
                 <p id="direccion" class="direccion"></p>
                 <h2 id="precio"></h2>
+                <p id="banios"></p>
+                <p id="dormitorios"></p>
                 <p id="descripcion"></p>
             </div>
         </main>
